Bug 202307 - panic: ARM64TODO: pmap_mincore from lib/libc/sys/mincore_test:mincore_err test
Summary: panic: ARM64TODO: pmap_mincore from lib/libc/sys/mincore_test:mincore_err test
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: CURRENT
Hardware: arm64 Any
: --- Affects Some People
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-13 18:38 UTC by Ed Maste
Modified: 2015-09-09 14:03 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ed Maste freebsd_committer freebsd_triage 2015-08-13 18:38:24 UTC
lib/libc/sys/mincore_test:mincore_err  ->  panic: ARM64TODO: pmap_mincore
cpuid = 0
KDB: stack backtrace:
db_trace_self() at db_trace_self_wrapper+0x28
         pc = 0xffffff80004896ec  lr = 0xffffff8000068a70
         sp = 0xffffff80400336f0  fp = 0xffffff8040033810

db_trace_self_wrapper() at vpanic+0x14c
         pc = 0xffffff8000068a70  lr = 0xffffff8000215bb8
         sp = 0xffffff8040033820  fp = 0xffffff8040033890

vpanic() at panic+0x4c
         pc = 0xffffff8000215bb8  lr = 0xffffff8000215c4c
         sp = 0xffffff80400338a0  fp = 0xffffff8040033920

panic() at pmap_mincore+0x10
         pc = 0xffffff8000215c4c  lr = 0xffffff8000497c10
         sp = 0xffffff8040033930  fp = 0xffffff8040033930

pmap_mincore() at sys_mincore+0x104
         pc = 0xffffff8000497c10  lr = 0xffffff800046cae8
         sp = 0xffffff8040033940  fp = 0xffffff80400339e0

sys_mincore() at do_el0_sync+0x3b4
         pc = 0xffffff800046cae8  lr = 0xffffff800049914c
         sp = 0xffffff80400339f0  fp = 0xffffff8040033aa0

do_el0_sync() at handle_el0_sync+0x68
         pc = 0xffffff800049914c  lr = 0xffffff800048a9e4
         sp = 0xffffff8040033ab0  fp = 0x0000007fffffe4f0

handle_el0_sync() at 0x40445abc
         pc = 0xffffff800048a9e4  lr = 0x0000000040445abc
         sp = 0x0000007fffffe500  fp = 0x0000007fffffe950

$d.6() at 0x40442908
         pc = 0x0000000040445abc  lr = 0x0000000040442908
         sp = 0x0000007fffffe960  fp = 0x0000007ffffffa60

$d.6() at 0x401710
         pc = 0x0000000040442908  lr = 0x0000000000401710
         sp = 0x0000007ffffffa70  fp = 0x0000007ffffffaa0

$d.6() at 0x40414428
         pc = 0x0000000000401710  lr = 0x0000000040414428
         sp = 0x0000007ffffffab0  fp = 0x0000000000000000

KDB: enter: panic
[ thread pid 22549 tid 100081 ]
Stopped at      kdb_enter+0x40:
db>
Comment 1 commit-hook freebsd_committer freebsd_triage 2015-08-17 23:19:53 UTC
A commit references this bug:

Author: emaste
Date: Mon Aug 17 23:19:37 UTC 2015
New revision: 286863
URL: https://svnweb.freebsd.org/changeset/base/286863

Log:
  On arm64 disable three tests that hang or panic

  Each issue has a PR open to track. This workaround allows us to run the
  tests to investigate the failures and avoid any new regressions.

  PR:		202304, 202305, 202307
  Reviewed by:	ngie
  Sponsored by:	The FreeBSD Foundation
  Differential Revision:	https://reviews.freebsd.org/D3378

Changes:
  head/lib/libc/tests/sys/Makefile
  head/lib/libproc/tests/proc_test.c
  head/lib/libutil/tests/Makefile
Comment 2 commit-hook freebsd_committer freebsd_triage 2015-09-08 18:41:41 UTC
A commit references this bug:

Author: andrew
Date: Tue Sep  8 18:41:07 UTC 2015
New revision: 287570
URL: https://svnweb.freebsd.org/changeset/base/287570

Log:
  Add support for pmap_mincore on arm64 by walking the page tables to find
  the details for the requested address.

  PR:		202307
  Obtained from:	ABT Systems Ltd
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/sys/arm64/arm64/pmap.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2015-09-08 18:44:43 UTC
A commit references this bug:

Author: andrew
Date: Tue Sep  8 18:44:13 UTC 2015
New revision: 287571
URL: https://svnweb.freebsd.org/changeset/base/287571

Log:
  Enable mincore_test on arm64, we now have a working pmap_mincore.

  PR:		202307
  Obtained from:	ABT Systems Ltd
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/lib/libc/tests/sys/Makefile